--- a/index.html
+++ b/index.html
@@ -9,27 +9,17 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | QR code component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); justify-items: flex-end;
-        align-self: center;}
-  </style>
 </head>
 <body>
- <section class="flex-container">
-   <div>
-       <img src="./images/image-qr-code.png">
-   </div>
-   <div class="text">
-     <span> Improve your front-end skills by building projects <br><br></span>
-
-     <span class="scan">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</span>
-   </div>
- </section>
+ <main class="flex-container">
+     <img src="./images/image-qr-code.png" alt="qr-code image">
+     <section class="text">
+         <h1> Improve your front-end skills by building projects <br><br></h1>
+         <p> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+     </section>
+ </main>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Barcode77</a>.
   </div>
 
